# bazelrc-parser-go

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  format.bzl  go.mod  go.sum  go_mod_tidy.sh
.github/workflows/: ci.yml
bazel_protos/bazel_flags/: BUILD.bazel  bazel_flags.pb.go
bazelrc/: BUILD.bazel  command_line.go  command_line_test.go  contents.go  datatables.go  parser.go  parser_test.go
bazelrc/testdata/: importable.bazelrc  invalid-importable.bazelrc
