module(name = "bazelrc_parser_go")

bazel_dep(name = "aspect_bazel_lib", version = "2.15.3")
bazel_dep(name = "rules_go", version = "0.47.0")
bazel_dep(name = "gazelle", version = "0.36.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_google_shlex",
    "com_github_stretchr_testify",
    "org_golang_google_protobuf",
    "org_golang_x_exp",
)

bazel_dep(name = "aspect_rules_lint", version = "0.19.0", dev_dependency = True)
bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.4.0",
    dev_dependency = True,
)
