load("@rules_go//go:def.bzl", "go_library", "go_test")
load("//:format.bzl", "format_test")

go_library(
    name = "bazelrc",
    srcs = [
        "command_line.go",
        "contents.go",
        "datatables.go",
        "parser.go",
    ],
    importpath = "github.com/bazel-contrib/bazelrc-parser-go/bazelrc",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel_protos/bazel_flags:bazel_flags_go_proto",
        "@com_github_google_shlex//:shlex",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_exp//slices",
    ],
)

alias(
    name = "go_default_library",
    actual = ":bazelrc",
    visibility = ["//visibility:public"],
)

go_test(
    name = "bazelrc_test",
    srcs = [
        "command_line_test.go",
        "parser_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":bazelrc"],
    deps = [
        "@com_github_stretchr_testify//require",
        "@rules_go//go/runfiles:go_default_library",
    ],
)

format_test()
