load("@rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
    name = "bazel_flags_go_proto",
    importpath = "github.com/bazel-contrib/bazelrc-parser-go/bazel_protos/bazel_flags",
    proto = "@bazel_tools//src/main/protobuf:bazel_flags_proto",
    visibility = ["//visibility:public"],
)
