load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@rules_go//proto:def.bzl", "go_proto_library")

# gazelle:exclude bazel_flags.pb.go

go_proto_library(
    name = "bazel_flags_go_proto",
    importpath = "github.com/bazel-contrib/bazelrc-parser-go/bazel_protos/bazel_flags",
    proto = "@bazel_tools//src/main/protobuf:bazel_flags_proto",
    visibility = ["//visibility:public"],
)

# If someone wants to import this project to a regular Go project they cannot
# use the bazel build files. By including the generated sources, we allow
# ourselves to look like a regular project.
filegroup(
    name = "extract_sources",
    srcs = [":bazel_flags_go_proto"],
    output_group = "go_generated_srcs",
)

write_source_files(
    name = "copy_sources_to_allow_go_get_import",
    files = {
        "bazel_flags.pb.go": ":extract_sources",
    },
)
